--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="images/logo_elite_das_massagens.png" alt="Elite das Massagens">
+                    <span class="logo-text">Elite das Massagens</span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#home">Início</a></li>
@@ -22,7 +23,6 @@
                     <li><a href="#courses">Cursos</a></li>
                     <li><a href="#ebook">E-book</a></li>
                     <li><a href="#instructor">Instrutora</a></li>
-                    <li><a href="#contact">Contato</a></li>
                 </ul>
                 <div class="hamburger">
                     <span></span>
@@ -94,17 +94,17 @@
 
             <div class="classes-grid">
                 <div class="class-card">
-                    <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Aula 1">
+                    <img src="images/aula1_video.png" alt="Aula 1">
                     <h3>AULA 1</h3>
                     <p>Fundamentos da Massagem Relaxante</p>
                 </div>
                 <div class="class-card">
-                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Aula 2">
+                    <img src="images/aula2_video.png" alt="Aula 2">
                     <h3>AULA 2</h3>
                     <p>Técnicas de Massagem Terapêutica</p>
                 </div>
                 <div class="class-card">
-                    <img src="https://images.unsplash.com/photo-1560750588-73207b1ef5b8?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Aula 3">
+                    <img src="images/aula3_video.png" alt="Aula 3">
                     <h3>AULA 3</h3>
                     <p>Massagem Facial e Relaxamento</p>
                 </div>
