feat: link videos to external link

--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
             <p>Quer começar sua jornada no mundo da massagem ou aprimorar suas habilidades? Não perca a oportunidade de participar das nossas três aulas gratuitas de massagem!</p>
 
             <div class="classes-grid">
-                <div class="class-card">
+                <a href="https://www.youtube.com/watch?v=IJn_LptQVgI" class="class-card" target="_blank" rel="noopener noreferrer">
                     <img src="images/aula1_video.png" alt="Aula 1">
                     <h3>AULA 1</h3>
                     <p>Fundamentos da Massagem Relaxante</p>
-                </div>
-                <div class="class-card">
+                </a>
+                <a href="https://www.youtube.com/watch?v=rrm62gpUiM8" class="class-card" target="_blank" rel="noopener noreferrer">
                     <img src="images/aula2_video.png" alt="Aula 2">
                     <h3>AULA 2</h3>
                     <p>Técnicas de Massagem Terapêutica</p>
-                </div>
-                <div class="class-card">
+                </a>
+                <a href="https://www.youtube.com/watch?v=aTcw30BBfoQ" class="class-card" target="_blank" rel="noopener noreferrer">
                     <img src="images/aula3_video.png" alt="Aula 3">
                     <h3>AULA 3</h3>
                     <p>Massagem Facial e Relaxamento</p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
