feat: open hotmart link to buy ebook

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             <li><i class="fas fa-check"></i> Guia prático com ilustrações</li>
                             <li><i class="fas fa-check"></i> Dicas profissionais exclusivas</li>
                         </ul>
-                        <a href="#" class="btn btn-primary btn-ebook">Adquirir E-book</a>
+                        <a href="https://pay.hotmart.com/C444360120?off=g1jpx7yy" class="btn btn-primary btn-ebook" target="_blank" rel="noopener noreferrer">Adquirir E-book</a>
                     </div>
                 </div>
             </div>
