feat: add more links and fix script

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="price">R$ 397</div>
                         <p><strong>Curso Completo de Massoterapia: Aprenda Diversas Técnicas em um Único Pacote!</strong></p>
                         <p>Transforme Sua Carreira com Nosso Combo de Formação em Massoterapia! Você está pronto para se tornar um profissional de massagem altamente qualificado?</p>
-                        <a href="#" class="btn btn-luxury"><span>SAIBA MAIS</span></a>
+                        <a href="https://pay.hotmart.com/F51173153F" class="btn btn-luxury" target="_blank" rel="noopener noreferrer"><span>SAIBA MAIS</span></a>
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
                         <div class="price">R$ 197</div>
                         <p><strong>A profundidade da Tradição Japonesa para Transformar Seu Futuro!</strong></p>
                         <p>Aprenda a Arte do Equilíbrio e Bem-Estar! Mergulhe em uma prática terapêutica que combina sabedoria ancestral com técnicas modernas.</p>
-                        <a href="#" class="btn btn-primary">SAIBA MAIS</a>
+                        <a href="https://pay.hotmart.com/R64218973K?sck=HOTMART_PRODUCT_PAGE&off=dfglnyuj&bid=1674166743801" class="btn btn-primary" target="_blank" rel="noopener noreferrer">SAIBA MAIS</a>
                     </div>
                 </div>
 
@@ -156,7 +156,7 @@
                         <div class="price">R$ 197</div>
                         <p><strong>Torne-se um Especialista em Saúde e Bem-Estar</strong></p>
                         <p>Aprenda a Técnica que Transforma Vidas e domine a Técnica para Saúde e Beleza!</p>
-                        <a href="#" class="btn btn-primary">SAIBA MAIS</a>
+                        <a href="https://hotmart.com/pt-br/marketplace/produtos/curso-de-drenagem-linfatica-manual-2/W52045494I" class="btn btn-primary" target="_blank" rel="noopener noreferrer">SAIBA MAIS</a>
                     </div>
                 </div>
 
@@ -170,7 +170,7 @@
                         <div class="price">R$ 97</div>
                         <p><strong>Aprenda a Arte de Redefinir o Corpo e Promover a Beleza.</strong></p>
                         <p>Aprenda técnicas avançadas que ajudam na modelagem do corpo, combate a celulite e promovem uma silhueta mais definida.</p>
-                        <a href="#" class="btn btn-primary">SAIBA MAIS</a>
+                        <a href="https://hotmart.com/pt-br/marketplace/produtos/curso-de-massagem-modeladora-6/H52207077B" class="btn btn-primary" target="_blank" rel="noopener noreferrer">SAIBA MAIS</a>
                     </div>
                 </div>
 
@@ -184,7 +184,7 @@
                         <div class="price">R$ 97</div>
                         <p><strong>Descubra a Arte da Massagem Relaxante e Faça a Diferença na Vida das Pessoas.</strong></p>
                         <p>Aprenda uma habilidade que pode transformar vidas e proporcionar um profundo bem-estar.</p>
-                        <a href="#" class="btn btn-primary">SAIBA MAIS</a>
+                        <a href="https://hotmart.com/pt-br/marketplace/produtos/curso-de-massagem-relaxante-detalhada/H40359846T" class="btn btn-primary" target="_blank" rel="noopener noreferrer">SAIBA MAIS</a>
                     </div>
                 </div>
 
@@ -198,7 +198,7 @@
                         <div class="price">R$ 197</div>
                         <p><strong>Transforme Sua Paixão por Massagem em uma Carreira de Sucesso.</strong></p>
                         <p>Aprenda técnicas que fazem uma diferença real na vida das pessoas, aliviando dores e tratando tensões musculares.</p>
-                        <a href="#" class="btn btn-primary">SAIBA MAIS</a>
+                        <a href="https://hotmart.com/pt-br/marketplace/produtos/curso-de-massagem-terapeutica/U52208821T" class="btn btn-primary" target="_blank" rel="noopener noreferrer">SAIBA MAIS</a>
                     </div>
                 </div>
             </div>
