feat: add social network links

--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
                     <p><i class="fas fa-envelope"></i> contato@elitedasmassagens.com</p>
                     <p><i class="fas fa-phone"></i> (11) 99999-9999</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a  href="https://www.instagram.com/elite.das.massagens?igsh=ZWxreWhlb25vcGNq" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/elitecursosdemassagem" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.youtube.com/@elitedasmassagens7930" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
