update icons and instructor writings

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <p>Cursos de massagem abrangem técnicas diversas, como massagem relaxante, terapêutica, shiatsu, drenagem linfática e muito mais.</p>
                 </div>
                 <div class="feature">
-                    <i class="fas fa-user-tie"></i>
-                    <h3>Instrutores Experientes</h3>
-                    <p>Nossos instrutores são profissionais renomados, com vasta experiência prática e teórica, prontos para compartilhar seu conhecimento.</p>
+                    <i class="fas fa-medal"></i>
+                    <h3>Instrutora Experiente</h3>
+                    <p>Nossa instrutora é uma profissional renomada, com vasta experiência prática e teórica, dedicada a transmitir todo seu conhecimento com excelência.</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-certificate"></i>
