fix: update links

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="price">R$ 397</div>
                         <p><strong>Curso Completo de Massoterapia: Aprenda Diversas Técnicas em um Único Pacote!</strong></p>
                         <p>Transforme Sua Carreira com Nosso Combo de Formação em Massoterapia! Você está pronto para se tornar um profissional de massagem altamente qualificado?</p>
-                        <a href="https://pay.hotmart.com/F51173153F" class="btn btn-luxury" target="_blank" rel="noopener noreferrer"><span>SAIBA MAIS</span></a>
+                        <a href="https://go.hotmart.com/R56393136F" class="btn btn-luxury" target="_blank" rel="noopener noreferrer"><span>SAIBA MAIS</span></a>
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
                         <div class="price">R$ 197</div>
                         <p><strong>A profundidade da Tradição Japonesa para Transformar Seu Futuro!</strong></p>
                         <p>Aprenda a Arte do Equilíbrio e Bem-Estar! Mergulhe em uma prática terapêutica que combina sabedoria ancestral com técnicas modernas.</p>
-                        <a href="https://pay.hotmart.com/R64218973K?sck=HOTMART_PRODUCT_PAGE&off=dfglnyuj&bid=1674166743801" class="btn btn-primary" target="_blank" rel="noopener noreferrer">SAIBA MAIS</a>
+                        <a href="https://go.hotmart.com/R64218973K?dp=1" class="btn btn-primary" target="_blank" rel="noopener noreferrer">SAIBA MAIS</a>
                     </div>
                 </div>
 
@@ -271,8 +271,6 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contato</h3>
-                    <p><i class="fas fa-envelope"></i> contato@elitedasmassagens.com</p>
-                    <p><i class="fas fa-phone"></i> (11) 99999-9999</p>
                     <div class="social-links">
                         <a  href="https://www.instagram.com/elite.das.massagens?igsh=ZWxreWhlb25vcGNq" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/elitecursosdemassagem" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
